--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,37 +6,51 @@
   <script src="https://unpkg.com/react@18.1.0/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
+
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
-  const Message = ({subject, greeting}) => {
-    return <div className="message">{greeting}, {subject}</div>
-  }
-
-  const PropTypes = {
-    exists(props, propName, componentName) {
-      if((!props[propName])){
-        return new Error(`This ${propName} prop needs to exist.`)
-      }
-    },
-    string(props, propName, componentName) {
-      if(typeof props[propName] !== 'string'){
-        return new Error (`This ${propName} needs to be a string to be accepted in the ${componentName}, but you passed a ${typeof props[propName]} instead.`)
-      }
+    
+    const Message = ({subject, greeting}) => {
+      return (
+        <div className="message">
+          {greeting}, {subject}
+        </div>
+      )
     }
-  }
 
-  Message.propTypes = {
-    subject: PropTypes.exists,
-    subject: PropTypes.string,
-    greeting: PropTypes.string,
-    greeting: PropTypes.exists,
-  }
+    Message.propTypes = {
+      subject: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired,
+    }
+
+    // const PropTypes = {
+    //   exists(props, propName, componentName) {
+    //     if((!props[propName])){
+    //       return new Error(`This ${propName} prop needs to exist.`)
+    //     }
+    //   },
+    //   string(props, propName, componentName) {
+    //     if(typeof props[propName] !== 'string'){
+    //       return new Error (`This ${propName} needs to be a string to be accepted in the ${componentName}, but you passed a ${typeof props[propName]} instead.`)
+    //     }
+    //   }
+    // }
+
+    // Message.propTypes = {
+    //   subject: PropTypes.exists,
+    //   subject: PropTypes.string,
+    //   greeting: PropTypes.string,
+    //   greeting: PropTypes.exists,
+    // }
+
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+
     const element = (
       <div className="container">
-        <Message greeting='Hello' subject='World'/>
-        <Message greeting='Goodbye' subject='World'/>
+        <Message greeting="Hello" subject="World" />
+        <Message greeting="Goodbye" subject="World" />
       </div>
     )
 
